--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@wdio/cucumber-framework": "^9.14.0",
     "@wdio/local-runner": "^9.14.0",
     "@wdio/spec-reporter": "^9.14.0",
+    "chai": "^5.2.0",
     "wdio-wait-for": "^3.1.0"
   },
   "scripts": {
