--- a/package.json
+++ b/package.json
@@ -2,11 +2,15 @@
   "name": "ebay",
   "type": "module",
   "devDependencies": {
+    "@wdio/allure-reporter": "^9.15.0",
     "@wdio/cli": "^9.14.0",
     "@wdio/cucumber-framework": "^9.14.0",
     "@wdio/local-runner": "^9.14.0",
     "@wdio/spec-reporter": "^9.14.0",
     "chai": "^5.2.0",
+    "cucumber-html-reporter": "^7.2.0",
+    "dotenv": "^16.5.0",
+    "wdio-cucumberjs-json-reporter": "^6.0.1",
     "wdio-wait-for": "^3.1.0"
   },
   "scripts": {
