--- a/package.json
+++ b/package.json
@@ -14,6 +14,6 @@
     "wdio-wait-for": "^3.1.0"
   },
   "scripts": {
-    "wdio": "wdio run ./wdio.conf.js"
+    "test": "wdio run ./wdio.conf.js"
   }
 }
