--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "type": "module",
   "devDependencies": {
     "@wdio/allure-reporter": "^9.15.0",
+    "@wdio/browser-runner": "^9.15.0",
     "@wdio/cli": "^9.14.0",
     "@wdio/cucumber-framework": "^9.14.0",
     "@wdio/local-runner": "^9.14.0",
