--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
   "name": "ebay",
   "type": "module",
-  "devDependencies": {
-    "@wdio/allure-reporter": "^9.15.0",
-    "@wdio/browser-runner": "^9.15.0",
-    "@wdio/cli": "^9.14.0",
-    "@wdio/cucumber-framework": "^9.14.0",
-    "@wdio/local-runner": "^9.14.0",
-    "@wdio/spec-reporter": "^9.14.0",
-    "chai": "^5.2.0",
-    "cucumber-html-reporter": "^7.2.0",
-    "dotenv": "^16.5.0",
-    "wdio-cucumberjs-json-reporter": "^6.0.1",
-    "wdio-wait-for": "^3.1.0"
-  },
   "scripts": {
-    "test": "wdio run ./wdio.conf.js"
+    "test": "wdio run wdio.conf.js",
+    "report": "open report/cucumber-report.html || xdg-open report/cucumber-report.html"
+  },
+  "devDependencies": {
+    "@wdio/cli": "^8.34.0",
+    "@wdio/local-runner": "^8.34.0",
+    "@wdio/cucumber-framework": "^8.34.0",
+    "@wdio/spec-reporter": "^8.34.0",
+    "@wdio/allure-reporter": "^8.34.0",
+    "wdio-chromedriver-service": "^8.1.1",
+    "chromedriver": "^137.0.0",
+    "chai": "^5.2.0",
+    "dotenv": "^16.5.0",
+    "cucumber-html-reporter": "^7.2.0",
+    "wdio-cucumberjs-json-reporter": "^5.1.8"
   }
 }
