--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,9 +29,11 @@ jobs:
     - name: Run WebdriverIO tests
       run: npm run test  # or npx wdio run wdio.conf.js
 
-    - name: Upload Allure report (optional)
-      if: always()
-      uses: actions/upload-artifact@v4
+    - name: Generate Cucumber HTML report
+      run: node generate-report.js
+
+    - name: Upload HTML Report
+      uses: actions/upload-artifact@v3
       with:
-        name: allure-results
-        path: ./allure-results
+        name: cucumber-html-report
+        path: reports/html/cucumber_report.html
