--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -34,5 +34,6 @@ jobs:
       with:
         name: cucumber-json-report
         path: |
-          reports/json/
-          reports/html/
+          report/json/
+          report/cucumber-report.html
+          screenshots/
